--- a/css/index.css
+++ b/css/index.css
@@ -350,3 +350,18 @@ img {
   background: #FFFFFF;
   color: #17A2B8;
 }
+p {
+  animation-duration: 3s;
+  animation-name: slidein;
+  animation-direction: alternate;
+}
+@keyframes slidein {
+  from {
+    margin-left: 100%;
+    width: 300%;
+  }
+  to {
+    margin-left: 0%;
+    width: 100%;
+  }
+}
