--- a/less/home-page.less
+++ b/less/home-page.less
@@ -112,3 +112,21 @@
     }
   }
 }// home
+
+p {
+  animation-duration: 3s;
+  animation-name: slidein;
+  animation-direction: alternate;
+}
+
+@keyframes slidein {
+  from {
+    margin-left: 100%;
+    width: 300%; 
+  }
+
+  to {
+    margin-left: 0%;
+    width: 100%;
+  }
+}
